--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -4,5 +4,10 @@
 @import "themes/dark";
 
 .app {
-  font-size: 30px;
+  font: var(--font-m);
+
+  background: var(--bg-color);
+  color: var(--primary-color);
+
+  min-height: 100vh;
 }
