add Navbar and AppLink

--- a/src/app/styles/themes/dark.scss
+++ b/src/app/styles/themes/dark.scss
@@ -1,6 +1,9 @@
 .app.dark {
   --bg-color: #3a264f;
+  --inverted-bg-color: #e3e2e3;
 
   --primary-color: rgb(194, 114, 127);
-  --secondary-color: pink;
+  --secondary-color: rgb(251, 210, 217);
+  --inverted-primary-color: rgb(54, 57, 128);
+  --inverted-secondary-color: rgb(9, 15, 210);
 }
