--- a/src/app/styles/themes/normal.scss
+++ b/src/app/styles/themes/normal.scss
@@ -1,6 +1,9 @@
 :root {
   --bg-color: #e3e2e3;
+  --inverted-bg-color: #3a264f;
 
   --primary-color: rgb(54, 57, 128);
   --secondary-color: rgb(9, 15, 210);
+  --inverted-primary-color: rgb(194, 114, 127);
+  --inverted-secondary-color: rgb(251, 210, 217);
 }
