--- a/src/app/styles/variables/global.scss
+++ b/src/app/styles/variables/global.scss
@@ -9,4 +9,6 @@
   --font-line-l: 24px;
   --font-l: var(--font-line-l) / var(--font-line-l) var(--font-family-main);
 
+  // sizes
+  --navbar-height: 50px;
 }
