--- a/src/app/styles/variables/global.scss
+++ b/src/app/styles/variables/global.scss
@@ -1,17 +1,14 @@
 :root {
-  --font-family-main: Helvetica, "Arial", "Times New Roman";
-
+  --font-family-main: helvetica, "Arial", "Times New Roman";
   --font-size-m: 16px;
   --font-line-m: 24px;
   --font-m: var(--font-line-m) / var(--font-line-m) var(--font-family-main);
-
   --font-size-l: 24px;
   --font-line-l: 24px;
   --font-l: var(--font-line-l) / var(--font-line-l) var(--font-family-main);
 
   // sizes
   --navbar-height: 50px;
-
   --sidebar-width: 300px;
   --sidebar-width-collapsed: 80px;
 }
