--- a/src/shared/ui/Loader/ui/Loader.scss
+++ b/src/shared/ui/Loader/ui/Loader.scss
@@ -10,7 +10,7 @@
   transform-origin: 40px 40px;
 }
 
-.lds-roller div:after {
+.lds-roller div::after {
   content: " ";
   display: block;
   position: absolute;
@@ -25,7 +25,7 @@
   animation-delay: -0.036s;
 }
 
-.lds-roller div:nth-child(1):after {
+.lds-roller div:nth-child(1)::after {
   top: 63px;
   left: 63px;
 }
@@ -34,7 +34,7 @@
   animation-delay: -0.072s;
 }
 
-.lds-roller div:nth-child(2):after {
+.lds-roller div:nth-child(2)::after {
   top: 68px;
   left: 56px;
 }
@@ -43,7 +43,7 @@
   animation-delay: -0.108s;
 }
 
-.lds-roller div:nth-child(3):after {
+.lds-roller div:nth-child(3)::after {
   top: 71px;
   left: 48px;
 }
@@ -52,7 +52,7 @@
   animation-delay: -0.144s;
 }
 
-.lds-roller div:nth-child(4):after {
+.lds-roller div:nth-child(4)::after {
   top: 72px;
   left: 40px;
 }
@@ -61,7 +61,7 @@
   animation-delay: -0.18s;
 }
 
-.lds-roller div:nth-child(5):after {
+.lds-roller div:nth-child(5)::after {
   top: 71px;
   left: 32px;
 }
@@ -70,7 +70,7 @@
   animation-delay: -0.216s;
 }
 
-.lds-roller div:nth-child(6):after {
+.lds-roller div:nth-child(6)::after {
   top: 68px;
   left: 24px;
 }
@@ -79,7 +79,7 @@
   animation-delay: -0.252s;
 }
 
-.lds-roller div:nth-child(7):after {
+.lds-roller div:nth-child(7)::after {
   top: 63px;
   left: 17px;
 }
@@ -88,7 +88,7 @@
   animation-delay: -0.288s;
 }
 
-.lds-roller div:nth-child(8):after {
+.lds-roller div:nth-child(8)::after {
   top: 56px;
   left: 12px;
 }
